FIX: Cambios en el dockerfile para que levante el front en docker

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,12 +5,8 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # Rutas API (coinciden con .env.production)
-  location /api/menu/ {
-    proxy_pass http://api-menu:8000/;
-  }
-  location /api/mozo/ {
-    proxy_pass http://api-mozo-y-cliente:8000/;
+  location /api/mozo-y-cliente/ {
+    proxy_pass http://mozo-y-cliente:8000/;
   }
 
   # React Router SPA fallback
