--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,10 @@
-# 1) Build
-FROM node:20-alpine AS build
+FROM node:20-alpine
 WORKDIR /app
+
+# instalar deps (rápido en dev)
 COPY package*.json ./
 RUN npm ci
-COPY . .
-RUN npm run build  # genera /dist
 
-# 2) Runtime (Nginx)
-FROM nginx:1.27-alpine
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /app/dist /usr/share/nginx/html
-# salud / caching estático listo
+# en dev montamos el código, no lo copiamos
+EXPOSE 5173
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
