AGREGADO: Configuracion de front con backend

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,3 +27,7 @@ services:
     restart: always
     env_file:
       - ../backend/api-mozo-y-cliente/.env
+
+networks:
+  backend:
+    driver: bridge
