--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.546.0",
     "next-themes": "^0.4.6",
+    "qs": "^6.14.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
@@ -39,6 +40,7 @@
     "@eslint/js": "^9.36.0",
     "@tailwindcss/vite": "^4.1.14",
     "@types/node": "^24.8.0",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
